# dsct

./: .mcp.json  AGENTS.md  CHANGELOG.md  Cargo.toml  GEMINI.md  README.md  cliff.toml  dist-workspace.toml  gemini-extension.json  justfile  plugin.json  release-plz.toml
.claude-plugin/: marketplace.json  plugin.json
.github/scripts/: gen_bench_pcap.py
.github/workflows/: benchmarks.yml  ci.yml  hol-skill-validate.yml  publish.yml  release-plz.yml  release.yml
agents/: analyze-packets.md
benches/: filter_parallel.rs  json_escape.rs  parallel_read.rs  tui_index.rs
docs/: design-dissect-buffer-reuse.md
skills/analyze-packets/: SKILL.md
src/: decode_as.rs  default_fields.toml  error.rs  esp_sa.rs  field_config.rs  field_format.rs  filter.rs  filter_expr.rs  input.rs  json_escape.rs  lib.rs  limits.rs  main.rs  mmap.rs  parallel.rs  parallel_read.rs  schema.rs  serialize.rs  sql_filter.rs
src/mcp/: limits.rs  mod.rs  raw_mcp.rs  tools.rs
src/output/: jsonl.rs  mod.rs
src/stats/: arp.rs  bgp.rs  dhcp.rs  dhcpv6.rs  diameter.rs  dns.rs  geneve.rs  gre.rs  gtpv1u.rs  gtpv2c.rs  helpers.rs  http.rs  http2.rs  icmp.rs  igmp.rs  lldp.rs  mdns.rs  mod.rs  nas5g.rs  ngap.rs  ntp.rs  ospf.rs  pfcp.rs  radius.rs  rtp.rs  sctp.rs  sip.rs  stun.rs  tcp_streams.rs  test_helpers.rs  tls.rs  top_talkers.rs  vxlan.rs
src/tui/: app.rs  bg_indexer.rs  clipboard.rs  color.rs  completion.rs  cursor.rs  event.rs  filter_apply.rs  filter_bitmap.rs  keys.rs  live.rs  loader.rs  mod.rs  owned_packet.rs  parallel_scan.rs  state.rs  stats_collect.rs  stream.rs  test_util.rs  tree.rs  ui.rs
src/tui/widgets/: command_line.rs  detail_tree.rs  hex_dump.rs  mod.rs  packet_list.rs  status_bar.rs  stream_view.rs
tests/: cli_error_test.rs  cli_output_snapshot_test.rs  cli_parallel_read_test.rs  cli_read_test.rs  cli_stats_test.rs  cli_streaming_edge_test.rs  cli_subcommands_test.rs  tui_live_test.rs
